[package]
name = "lib_myfltk"
version = "0.1.4"
authors = ["John T. Reagan"]
edition = "2021"
license = "MIT"
description = "Utility functions based on the FLTK.rs GUI library."
readme = "README.MD"
repository = "https://github.com/jtreagan/lib_myfltk"

[dependencies]
# Non-standard crates
fltk = { version = "^1.5", features = ["fltk-bundled"] }

# Reagan-created libraries
lib_utils = "0.1.3"

